fix header alignment issues

--- a/styles.css
+++ b/styles.css
@@ -15,14 +15,20 @@ header{
     background-color: #1F2937;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 60px;
     padding-left: 100px;
     height: 400px;
-    
+    align-items: flex-start;
+}
+
+body{
+    font-family: 'Roboto', sans-serif;
 }
 
  .header.top{
     display: flex;
+    gap: 500px;
  }
 
  .logo{
@@ -33,8 +39,8 @@ header{
 ul{
     list-style-type: none;
     display: flex;
-    margin-left: auto;
-    margin-right: 80px;
+    align-items: center;
+    justify-content: center;
 }
 
 a{
@@ -147,7 +153,7 @@ li{
     font-size: 36px;
     color: #1F2937;
     width: 900px;
-    font-family: 'Roboto', sans-serif;
+    
     font-weight: 300; /* Use 300 for light weight, adjust if necessary */
     font-style: italic;
  }
